Consolidates the pico spi with the api into the new replacement "pico" module (#5400)
* Introduce the Pico SPI. This PR also consolidates the original pico api module with the spi module and names it "pico". The default reference implementation for this API/SPI will follow in a future PR.

* Align Pico with Helidon development guide.

* fix an issue with Optional and toStringInner

* change from AssertionError to IllegalStateExceptions

Co-authored-by: Tomas Langer <tomas.langer@oracle.com>